[tool.poetry]
name = "llm-langchain-app2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.4"
streamlit = "^1.40.0"
langchain = ">=0.2.17,<0.3.0"
openai = "^1.54.3"
langchain-community = "^0.2.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
